Add aa support (#4350)
* Add new AA support XML options

* Refactor SBR roll logic

* Add mapping for new properties

* Update unit tooltip

* Clean up AA DiceRoll methods

* Remove some out dated and unnecessary duplicate checks

* Clean up support DiceRoll methods

* Create AA support methods and refactor existing support methods

* Begin wiring up new AA support methods

* Finish wiring up aa support methods

* Update unit tests

* Fix max dice sides calc

* Add method javadocs and rename method

* Improve formatting

* Fix line length violations

* Add unit test for new aa support functionality